css/app.css
/* base for rem */
html {
   font-size: 10px;
}

body {
   scroll-behavior: smooth;
   background-color: var(--primary);
   color: var(--secondary);
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   font-size: 1.6rem;
}

a {
   text-decoration: none;
   color: inherit;
}

strong {
   color: var(--tertiary);
}

.card {
   color: var(--secondary);
}

/* titles */
h2 {
   display: inline;
   text-align: center;
   font-size: 3.5rem;
   font-weight: 400;

}

h3 {
   color: var(--secondary);
   background-color: var(--primary);
}

h4 {
   font-size: 2.5rem;
   padding: 1rem;
}

h6 {
   font-size: 1.8rem;
   margin: 0 auto;
   text-align: center;
}

/* Modal */
.modal-body {
   padding: 5px;
}



/* cards */

.card {
   border: 0
}

.card-header {
   padding: 0;
   border: 0;
   padding: 1rem;
   margin: 0;
   text-align: center;
   color: var(--primary);
   background-color: var(--secondary);
   position: relative
}

.icon-where {
   display: inline-block;
   background-color: var(--secondary);
   position: fixed;
   right: 1.5rem;
   bottom: 7.5rem;
   height: 5rem;
   width: 5rem;
   border-radius: 100%;
   padding: 10px;
   text-align: center;
   border: 2px solid var(--primary);
   z-index: 50;
   cursor: pointer;

}

.icon-where img {
   max-height: 3.8rem;
   width: auto;
}

.card-body {
   padding: 0;
}

.row {
   max-width: 100%;
   margin: 0;
   padding: 0;
   --bs-gutter-x: 0;
}

/* accordions */



.accordion-header {
   text-align: right;
   position: relative;
   background-color: var(--primary);

}



.accordion-header::before {
   position: absolute;
   bottom: 10px;
   width: 80px;
   height: 4px;
   content: "";
   left: 50%;
   margin-left: -40px;
   background-color: var(--tertiary);
   z-index: 100;

}



.accordion-button {
   font-size: 2.3rem;
   padding: 20px 15px;
   text-align: center;
   font-weight: 500;
   color: var(--secondary);
   justify-content: center;
   background-color: var(--primary);
}

.accordion-button:not(.collapsed) {
   background-color: transparent;
   color: var(--secondary);
   box-shadow: none;
}

.accordion-button:focus {

   box-shadow: none;

}

.accordion-button::after {
   position: absolute;
   right: 3%;
}

.accordion {
   --bs-accordion-bg: var(--primary);
}

.accordion-body {
   padding: 0 !important;
   font-size: 1.5rem;
   border: 0;
}

.table>:not(caption)>*>* {
   color: var(--secondary);
}

.accordion-item {
   color: var(--dark-grey);
}

.data-container {
   height: fit-content;
}


/* image */
.figure-container {
   height: 50vh;
}

figure {
   height: 100%;
   width: 100%;
   position: relative;
}


img {
   object-fit: cover;
   width: 100%;
   height: 100%;
}


figcaption {
   color: #383838;
   font-size: 1.5rem;
   position: absolute;
   bottom: 0;
   left: 0;
   background-color: var(--primary);
   padding: 2px 6px;
   border-bottom: 1px solid var(--secondary);
   border-left: 1px solid var(--secondary);
   border-radius: 0 5px 0 0;
}

/* narrative buttons */
.narrative-button {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   background-color: transparent;
   border: 2px solid var(--secondary);
   padding: 7px;
   border-radius: 12px;
}

.narrative-button p {
   margin: 0 5px;
   color: inherit;

}

.narrative-icon {
   height: 3.5rem;
   width: auto;
}

/* hover behaviour on narrative buttons */
.narrative-button:hover {
   border: 2px solid var(--tertiary);
   color: var(--tertiary);
   transition: all 0.3s ease-out;
}

.narrative-button:hover img {
   filter: brightness(0) saturate(100%) invert(17%) sepia(80%) saturate(4825%) hue-rotate(355deg) brightness(84%) contrast(87%);
   transition: all 0.3s ease-out;
}


/* active narrative button */
.narrative-button.active-narrative {
   background-color: var(--tertiary);
   border: 2px solid var(--tertiary);
   color: var(--primary);
}

.narrative-button.active-narrative img {
   -webkit-filter: invert(100%);
   filter: invert(100%);
}






/* tables */
.table p {
   display: inline;
}

.table {
   margin: 0;
   width: 100%;
   --bs-table-bg: transparent;
   border: none
}

.table th,
.table td {
   padding: 10px;
}

.table th {
   width: 30%;
}

.table td {
   width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   column-gap: 15px;
   row-gap: 5px;
}

tbody {
   width: 100%;
}

tbody,
td,
tfoot,
th,
thead,
tr {
   border: 0px;
}

tr {
   position: relative;
   justify-content: center;
}

tr::before {
   content: '';
   position: absolute;
   top: 0px;
   width: 85%;
   /* Adjust this width as needed */
   border-top: solid var(--secondary) 1px;
   left: 50%;
   /* Position at the horizontal center */
   transform: translateX(-50%);
   /* Adjust to center horizontally */
}

tr:first-child::before {
   content: '';
   position: absolute;
   width: 85%;
   /* Adjust this width as needed */
   border-top: solid var(--secondary) 0px;
   left: 50%;
   /* Position at the horizontal center */
   transform: translateX(-50%);
   /* Adjust to center horizontally */

}

th {
   vertical-align: middle;
   font-weight: 400;
}

/* info box */

.card-title {
   background-color: var(--secondary);
   color: var(--primary)
}

.card-text {
   max-width: 1000px;
   text-align: justify;
   margin: auto;
   font-size: 1.5rem;
   padding: 1.5rem;

}

.card-text p,
.card-text h5 {
   opacity: 0;
   transition: opacity 1.4s ease-in-out;

}

.card-text.visible p,
.card-text.visible h5 {
   opacity: 1;
}



/* Bottom Navbar */
.card-footer {
   position: fixed;
   bottom: 0;
   width: 100%;
   background-color: var(--primary);
   color: var(--secondary);
   height: 6rem;
   left: 50%;
   transform: translateX(-50%);
   box-shadow: 0px -3px 16px -1px rgba(0, 0, 0, 0.46);
   -webkit-box-shadow: 0px -3px 16px -1px rgba(0, 0, 0, 0.46);
   -moz-box-shadow: 0px -3px 16px -1px rgba(0, 0, 0, 0.46);
   z-index: 1001;
}

.card-footer.open {
   justify-content: center !important;
}

.card-footer div {
   display: flex;
   flex-direction: column;
   align-items: center;
}


.card-footer div img {
   transform: none;
   width: 1.5rem;
   height: 1.5rem;
   transition: all 0.5s ease-in-out;
}

.card-footer div img.rotated {
   transform: rotate(-180deg);
}

.card-footer div img.rotated:hover {
   cursor: pointer;

}

.card-footer:last-child {
   border-radius: 0;
}

/* buttons */
.btn-primary {
   background-color: var(--tertiary);
   color: var(--primary);
   border: 2px solid var(--tertiary);
}

.btn-primary:hover {
   background-color: var(--primary);
   color: var(--tertiary);
   border: 2px solid var(--tertiary);
   transition: all 0.3s ease-out;
}

.info-button {

   display: block;
   width: fit-content;
   margin: 10px auto;
   background-color: var(--primary);
   color: var(--tertiary);
   border: 0;
   transition: all 0.3s ease-out;
}

.info-button:hover {
   background-color: var(--tertiary);
   color: var(--primary);
}

.nav-button {
   font-size: 1.3rem;
   border-radius: 12px;
   min-width: fit-content;
   width: 10%;
}

.btn:disabled,
fieldset:disabled {
   font-size: 1.3rem;
   border-radius: 12px;
   min-width: fit-content;
   width: 10%;

   color: inherit;
   pointer-events: none;
   background-color: inherit;
   border-color: var(--tertiary);
   opacity: inherit
}

/* clicked nav button */
:not(.btn-check)+.btn:active {
   background-color: var(--primary);
   color: var(--tertiary);
   border: 2px solid var(--tertiary);
   transition: all 0.3s ease-out;
}

.btn:first-child:active {
   background-color: var(--primary);
   color: var(--tertiary);
   border: 2px solid var(--tertiary);
   transition: all 0.3s ease-out;
}


/* narrative info */

img.close-btn:hover {
   cursor: pointer
}

.narrative-info {
   position: fixed;
   z-index: 999;
   background-color: var(--primary);
   width: 100vw;
   height: 100vh;
   padding: 2rem;
   overflow: scroll;
   text-align: right;
   transition: all 1.5s ease-in-out;
   top: 100vh;
   border-top-left-radius: 20px;
   border-top-right-radius: 20px;
}

.narrative-info p {
   font-size: 1.5rem;
   text-align: justify;
   padding: 1rem 2rem;
}

.narrative-info img {
   height: 5rem;
   width: auto;
   padding: 10px;
}

.narrative-info.displayed {
   top: 0;
   padding-bottom: 6.5rem;
}

/* modal for the map */
#object-id {
   text-align: center;
   margin-top: 10px;

}

#footer {
   padding-bottom: 7rem;
}

